; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nfsd/extr_nfs4state.c_nfsd4_free_slab.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nfsd/extr_nfs4state.c_nfsd4_free_slab.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kmem_cache = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.kmem_cache**)* @nfsd4_free_slab to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nfsd4_free_slab(%struct.kmem_cache** %0) #0 {
  %2 = alloca %struct.kmem_cache**, align 8
  store %struct.kmem_cache** %0, %struct.kmem_cache*** %2, align 8
  %3 = load %struct.kmem_cache**, %struct.kmem_cache*** %2, align 8
  %4 = load %struct.kmem_cache*, %struct.kmem_cache** %3, align 8
  %5 = icmp eq %struct.kmem_cache* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  br label %12

7:                                                ; preds = %1
  %8 = load %struct.kmem_cache**, %struct.kmem_cache*** %2, align 8
  %9 = load %struct.kmem_cache*, %struct.kmem_cache** %8, align 8
  %10 = call i32 @kmem_cache_destroy(%struct.kmem_cache* %9)
  %11 = load %struct.kmem_cache**, %struct.kmem_cache*** %2, align 8
  store %struct.kmem_cache* null, %struct.kmem_cache** %11, align 8
  br label %12

12:                                               ; preds = %7, %6
  ret void
}

declare dso_local i32 @kmem_cache_destroy(%struct.kmem_cache*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
